--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Webinar: Módulo de Neumática Avanzada, Sesión 1 by F-Didactic</title>
         <link rel="stylesheet" href="css/bootstrap.min.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+        />
     </head>
     <body class="bg-light">
         <header>
@@ -24,8 +29,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbar">
                         <ul class="navbar-nav me-auto"></ul>
-                        <div class="mx-4 text-primary fw-bold">Inicio de sesión del host</div>
+                        <div class="mx-4 text-primary fw-bold presented-by-links" id="login">
+                            Inicio de sesión del host
+                        </div>
                         <button
+                            id="register"
                             type="button"
                             data-bs-toggle="modal"
                             data-bs-target="#registerModal"
@@ -38,7 +46,7 @@
             </nav>
         </header>
 
-        <!-- Modal -->
+        <!-- Modals -->
         <div
             class="modal fade"
             id="registerModal"
@@ -47,29 +55,101 @@
             aria-hidden="true"
         >
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content rounded-4">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5 col-sm-11 text-center fw-bold" id="registerModalLabel">
                             Registrarse para ver grabaciones
                         </h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
-                        <form>
+                    <form>
+                        <div class="modal-body">
                             <div class="mb-3">
                                 <div class="mb-3">
                                     <label for="name" class="form-label fw-bold text-black-50"
                                         >Su nombre completo*</label
                                     >
-                                    <input type="text" class="form-control" id="name" />
+                                    <input type="text" class="form-control" required id="name" />
                                 </div>
                                 <label for="email" class="form-label fw-bold text-black-50">Su e-mail*</label>
-                                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" />
+                                <input
+                                    type="email"
+                                    class="form-control"
+                                    required
+                                    id="email"
+                                    aria-describedby="emailHelp"
+                                />
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="col-sm-12 text-center btn btn-primary fw-bold">
+                                Registrarse
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content rounded-4">
+                    <div class="modal-header d-flex justify-content-center position-relative">
+                        <h5 class="modal-title fw-bold" id="loginModalLabel">Log in</h5>
+                    </div>
+                    <button
+                        type="button"
+                        class="btn-close position-absolute end-0"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                    ></button>
+                    <div class="modal-body">
+                        <div class="text-center social-login">
+                            <button class="btn btn-outline-primary rounded-5"><i class="bi bi-facebook"></i></button>
+                            <button class="btn btn-outline-primary rounded-5"><i class="bi bi-linkedin"></i></button>
+                            <button class="btn btn-outline-danger rounded-5"><i class="bi bi-google"></i></button>
+                        </div>
+                        <div class="text-center my-3">or</div>
+                        <form>
+                            <div class="mb-3">
+                                <input type="email" class="form-control" id="email" placeholder="Email" />
+                            </div>
+                            <div class="mb-3">
+                                <input type="password" class="form-control" id="password" placeholder="Password" />
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="rememberMe" checked />
+                                    <label class="form-check-label" for="rememberMe"></label>
+                                </div>
+                                <a href="#" class="text-decoration-none">Forgot/Reset Password</a>
+                            </div>
+                            <div class="d-grid mt-3">
+                                <button type="submit" class="btn btn-primary fw-bold">Log In</button>
                             </div>
                         </form>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="col-sm-12 text-center btn btn-primary fw-bold">Registrarse</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal" id="presenterModal" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content rounded-4">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="div">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <img class="img-fluid w-50" src="img/s.jpg" />
+                                </div>
+                                <div class="col-sm-2 text-black-50 fw-bold">Nombre</div>
+                                <div class="col-sm-7">Seminarios y Diplomados F-MX</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -77,10 +157,19 @@
 
         <main>
             <section id="home">
+                <video id="video" class="w-100" height="600" controls>
+                    <source src="" type="video/mp4" />
+                    <source src="" type="video/ogg" />
+                    <source src="" type="video/webm" />
+                    <object data="" width="470" height="255">
+                        <embed src="" width="470" height="255" />
+                    </object>
+                </video>
+
                 <iframe
-                    class="w-100"
-                    height="650"
-                    src="https://www.youtube.com/embed/J_ALhYtBlG4/?controls=0&rel=0"
+                    class="w-100 d-none"
+                    height="600"
+                    src="https://www.youtube.com/embed/McZ96HE48l0/?controls=0&rel=0"
                     frameborder="0"
                 >
                 </iframe>
@@ -112,13 +201,15 @@
 
                     <div class="container">
                         <dl class="row">
-                            <dt class="col-sm-2 text-end"><img class="img-fluid w-50" src="img/s.jpg" /></dt>
-                            <dd class="col-sm-10 text-start fw-bold">Seminarios y Diplomados F-MX</dd>
+                            <dt class="col-sm-2 text-end">
+                                <img class="img-fluid w-50 presenter-blocks" src="img/s.jpg" />
+                            </dt>
+                            <dd class="col-sm-10 text-start fw-bold presenter-blocks">Seminarios y Diplomados F-MX</dd>
                         </dl>
                         <div class="row">
                             <div class="col-sm-2"></div>
-                            <div class="col-sm-10 text-start">
-                                <a href="#">Perfil completo</a>
+                            <div class="col-sm-10 text-start presenter-blocks">
+                                <a href="">Perfil completo</a>
                             </div>
                         </div>
                     </div>
@@ -138,10 +229,10 @@
                             <div class="col-sm-10 text-start">
                                 <div class="row">
                                     <div class="col-sm-2">
-                                        <a href="#">Suscribirse</a>
+                                        <a href="#" class="presented-by-links">Suscribirse</a>
                                     </div>
                                     <div class="col-sm-10">
-                                        <a href="#">Contacto</a>
+                                        <a href="#" class="presented-by-links">Contacto</a>
                                     </div>
                                 </div>
                             </div>
@@ -153,11 +244,11 @@
             </div>
         </main>
 
-        <script src="js/app.js"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"
         ></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
