--- a/admin/index.html
+++ b/admin/index.html
@@ -33,6 +33,11 @@
                 <div class="row vh-100">
                     <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 mx-auto d-table h-100">
                         <div class="d-table-cell align-middle">
+                            <div class="container box">
+                                <div class="row w-50">
+                                    <img src="../img/logo.png" class="img-fluid logo px-4" />
+                                </div>
+                            </div>
                             <div class="text-center mt-4">
                                 <h1 class="h2">Bienvenido</h1>
                                 <p class="lead">Inicie sesión en su cuenta para continuar</p>
