--- a/success.html
+++ b/success.html
@@ -30,112 +30,9 @@
                     >
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbar">
-                        <ul class="navbar-nav me-auto"></ul>
-                        <div class="mx-4 text-primary fw-bold presented-by-links" id="login">
-                            Inicio de sesión del host
-                        </div>
-                        <button
-                            id="register"
-                            type="button"
-                            data-bs-toggle="modal"
-                            data-bs-target="#registerModal"
-                            class="btn btn-lg btn-primary rounded-4"
-                        >
-                            <span class="px-4 fw-bold">Registrarse</span>
-                        </button>
-                    </div>
                 </div>
             </nav>
         </header>
-
-        <!-- Modals -->
-        <div
-            class="modal fade"
-            id="registerModal"
-            tabindex="-1"
-            aria-labelledby="registerModalLabel"
-            aria-hidden="true"
-        >
-            <div class="modal-dialog">
-                <div class="modal-content rounded-4">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5 col-sm-11 text-center fw-bold" id="registerModalLabel">
-                            Registrarse para ver grabaciones
-                        </h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <form>
-                        <div class="modal-body">
-                            <div class="mb-3">
-                                <div class="mb-3">
-                                    <label for="name" class="form-label fw-bold text-black-50"
-                                        >Su nombre completo*</label
-                                    >
-                                    <input type="text" class="form-control" required id="name" />
-                                </div>
-                                <label for="email" class="form-label fw-bold text-black-50">Su e-mail*</label>
-                                <input
-                                    type="email"
-                                    class="form-control"
-                                    required
-                                    id="email"
-                                    aria-describedby="emailHelp"
-                                />
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="col-sm-12 text-center btn btn-primary fw-bold">
-                                Registrarse
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <!-- Modal -->
-        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content rounded-4">
-                    <div class="modal-header d-flex justify-content-center position-relative">
-                        <h5 class="modal-title fw-bold" id="loginModalLabel">Log in</h5>
-                    </div>
-                    <button
-                        type="button"
-                        class="btn-close position-absolute end-0"
-                        data-bs-dismiss="modal"
-                        aria-label="Close"
-                    ></button>
-                    <div class="modal-body">
-                        <div class="text-center social-login">
-                            <button class="btn btn-outline-primary rounded-5"><i class="bi bi-facebook"></i></button>
-                            <button class="btn btn-outline-primary rounded-5"><i class="bi bi-linkedin"></i></button>
-                            <button class="btn btn-outline-danger rounded-5"><i class="bi bi-google"></i></button>
-                        </div>
-                        <div class="text-center my-3">or</div>
-                        <form>
-                            <div class="mb-3">
-                                <input type="email" class="form-control" id="email" placeholder="Email" />
-                            </div>
-                            <div class="mb-3">
-                                <input type="password" class="form-control" id="password" placeholder="Password" />
-                            </div>
-                            <div class="d-flex justify-content-between">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="rememberMe" checked />
-                                    <label class="form-check-label" for="rememberMe"></label>
-                                </div>
-                                <a href="#" class="text-decoration-none">Forgot/Reset Password</a>
-                            </div>
-                            <div class="d-grid mt-3">
-                                <button type="submit" class="btn btn-primary fw-bold">Log In</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div class="modal" id="presenterModal" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
@@ -160,17 +57,8 @@
 
         <main>
             <section id="home">
-                <video id="video" class="w-100" height="600" controls>
-                    <source src="" type="video/mp4" />
-                    <source src="" type="video/ogg" />
-                    <source src="" type="video/webm" />
-                    <object data="" width="470" height="255">
-                        <embed src="" width="470" height="255" />
-                    </object>
-                </video>
-
                 <iframe
-                    class="w-100 d-none"
+                    class="w-100"
                     height="600"
                     src="https://www.youtube.com/embed/McZ96HE48l0/?controls=0&rel=0"
                     frameborder="0"
@@ -187,7 +75,6 @@
             <div class="d-flex justify-content-center">
                 <div class="bg-white w-50 text-center">
                     <h1 class="fw-bold">Módulo de Neumática Avanzada, Sesión 1</h1>
-                    <a href="checkout.html" class="btn btn-lg btn-primary rounded-4 fw-bold mt-4">Comprar</a>
                     <hr class="pX-5 mt-5 mx-5 mt-5" />
                     <p class="text-black-50 fw-bold">DETALLES DEL SEMINARIO WEB</p>
                     <div class="container">
@@ -259,6 +146,6 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"
         ></script>
-        <script src="js/index.js"></script>
+        <script src="js/success.js"></script>
     </body>
 </html>
