Added logo to checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -10,13 +10,21 @@
         <script src="checkout.js" defer></script>
     </head>
     <body>
-        <form id="payment-form">
-            <div id="payment-element"></div>
-            <button id="submit">
-                <div class="spinner hidden" id="spinner"></div>
-                <span id="button-text">Comprar curso</span>
-            </button>
-            <div id="payment-message" class="hidden"></div>
-        </form>
+        <div class="container">
+            <div class="row bg-white box">
+                <img src="img/logo.png" class="img-fluid w-25 logo" />
+            </div>
+            <br />
+            <div class="row">
+                <form id="payment-form">
+                    <div id="payment-element"></div>
+                    <button id="submit">
+                        <div class="spinner hidden" id="spinner"></div>
+                        <span id="button-text">Comprar curso</span>
+                    </button>
+                    <div id="payment-message" class="hidden"></div>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
