--- a/admin/index.html
+++ b/admin/index.html
@@ -33,9 +33,9 @@
                 <div class="row vh-100">
                     <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 mx-auto d-table h-100">
                         <div class="d-table-cell align-middle">
-                            <div class="container box">
+                            <div class="container box bg-white">
                                 <div class="row w-50">
-                                    <img src="../img/logo.png" class="img-fluid logo px-4" />
+                                    <img src="../img/logo.png" class="img-fluid" />
                                 </div>
                             </div>
                             <div class="text-center mt-4">
