--- a/admin/users.html
+++ b/admin/users.html
@@ -32,7 +32,7 @@
                 <div class="sidebar-content js-simplebar">
                     <div class="container box">
                         <div class="row">
-                            <img src="../img/logo.png" class="img-fluid logo px-4" />
+                            <img src="../img/logo2.png" class="img-fluid px-5" />
                         </div>
                     </div>
                     <ul class="sidebar-nav">
