--- a/admin/users.html
+++ b/admin/users.html
@@ -12,8 +12,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
-        <link rel="canonical" href="https://demo-basic.adminkit.io/pages-blank.html" />
-
         <title>Usuarios</title>
 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
@@ -52,6 +50,12 @@
                             <a class="sidebar-link" href="sessions.html">
                                 <i class="align-middle" data-feather="film"></i>
                                 <span class="align-middle">Sesiones</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a class="sidebar-link" href="charts.html">
+                                <i class="align-middle" data-feather="bar-chart-2"></i>
+                                <span class="align-middle">Gráficas</span>
                             </a>
                         </li>
                     </ul>
