--- a/admin/users.html
+++ b/admin/users.html
@@ -175,10 +175,11 @@
                         <div id="content">
                             <div class="container text-center">
                                 <div class="row bg-primary text-white fw-bold">
-                                    <div class="col">Curso</div>
-                                    <div class="col">Tiempo invertido</div>
-                                    <div class="col">Actualmente inscrito</div>
-                                    <div class="col">Inscrito el</div>
+                                    <div class="col-sm-4">Curso</div>
+                                    <div class="col-sm-2">Tiempo invertido</div>
+                                    <div class="col-sm-2">Actualmente inscrito</div>
+                                    <div class="col-sm-2">Inscrito el</div>
+                                    <div class="col-sm-2">Dar de baja</div>
                                 </div>
                             </div>
                             <div class="container" id="courses"></div>
